# QtLearnProjects

./: .gitignore
Canvas/: CMakeLists.txt  ColorSquare.qml  CompositionModesExamples.qml  GradientExample.qml  ImagesExample.qml  Main.qml  Paint.qml  PixelBuffersExample.qml  PortingHTML5.qml  ShadowsExample.qml  SimpleCanvasExample.qml  TransformationExample.qml  resources.qrc
CommonPatterns/: About.qml  CMakeLists.txt  Home.qml  Main.qml  Profile.qml  main.cpp
CommonPatterns/documet-windows/: CMakeLists.txt  DocumentWindow.qml  main.cpp
CommonPatterns/sidebyside/: CMakeLists.txt  Home.qml  Main.qml  Stats.qml  TotalStats.qml  main.cpp
CommonPatterns/stackView/: About.qml  CMakeLists.txt  EditProfile.qml  Home.qml  Main.qml  Profile.qml  main.cpp
ImageViewer/: CMakeLists.txt  ImageViewerWindow.qml  Main.qml  main.cpp
ImageViewer/+android/: Main.qml
ImagineStyle/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
ModelView/: BasicModels.qml  CMakeLists.txt  CMakeLists.txt.user.dc074ff  DelegateAnimations.qml  GreenBox.qml  GridViewExamples.qml  ListViewExamples.qml  Main.qml  ModelsWithActionsExample.qml  MyTableModel.qml  ObjectModelExample.qml  Paths.qml  SectionsInLists.qml  ShapeShiftingDelegates.qml  XMLModels.qml  YellowBox.qml  main.cpp  resources.qrc
QtLearn/: QtLearn.qml  QtLearn.qmlproject  QtLearn.qrc
QtLearn/Animations/: Animations.qml  Box.qml  Easing.qml  GroupedAnimations.qml  KeysBinds.qml  NestedAnimations.qml
QtLearn/States/: State.qml
Shapes/: AnimationShape.qml  Basic.qml  BuildingPaths.qml  CMakeLists.txt  FillingShapes.qml  Main.qml  main.cpp
