cmake_minimum_required(VERSION 3.16)

project(ModelView VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.8)


# UŻYWAJ SYSTEMU QRC I WŁĄCZ TA LINIE KODU:
#====================================================
set(CMAKE_AUTORCC ON)
# !!!!!!!!!!!!!!!!!!!!!!!
#====================================================

qt_add_executable(appModelView
    main.cpp
)

qt_add_qml_module(appModelView
    URI ModelView
    VERSION 1.0
    QML_FILES
        Main.qml
        GreenBox.qml
        BasicModels.qml
        YellowBox.qml
        ListViewExamples.qml
        GridViewExamples.qml
        DelegateAnimations.qml
        ShapeShiftingDelegates.qml
        Paths.qml
        MyTableModel.qml
    RESOURCES
        resources.qrc
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appModelView PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appModelView
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appModelView
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appModelView
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
